// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Angular Basic Child Component 1`] = `
"import { Component } from \\"@angular/core\\";

import MyBasicComponent from \\"./basic.raw\\";
import MyBasicOnMountUpdateComponent from \\"./basic-onMount-update.raw\\";

@Component({
  selector: \\"my-basic-child-component\\",
  template: \`
    <div>
      <my-basic-component [id]=\\"dev\\"></my-basic-component>

      <div>
        <my-basic-on-mount-update-component
          [hi]=\\"name\\"
          [bye]=\\"dev\\"
        ></my-basic-on-mount-update-component>
      </div>
    </div>
  \`,
})
export default class MyBasicChildComponent {
  name = \\"Steve\\";
  dev = \\"PatrickJS\\";
}
"
`;

exports[`Angular BasicFor 1`] = `
"import { Component } from \\"@angular/core\\";

@Component({
  selector: \\"my-basic-for-component\\",
  template: \`
    <div>
      <ng-container *ngFor=\\"let person of names\\">
        <div>
          <input
            [value]=\\"name\\"
            (input)=\\"
         name = $event.target.value + ' and ' + person;
       \\"
          />

          Hello {{person}} ! I can run in Qwik, Web Component, React, Vue,
          Solid, or Liquid!
        </div>
      </ng-container>
    </div>
  \`,
})
export default class MyBasicForComponent {
  name = \\"PatrickJS\\";
  names = [\\"Steve\\", \\"PatrickJS\\"];

  ngOnInit() {
    console.log(\\"onMount code\\");
  }
}
"
`;

exports[`Angular Slot Jsx 1`] = `
"import { Component } from \\"@angular/core\\";

import ContentSlotCode from \\"./content-slot-jsx.raw\\";

@Component({
  selector: \\"slot-code\\",
  template: \`
    <div>
      <content-slot-code><div testing>Hello</div></content-slot-code>
    </div>
  \`,
})
export default class SlotCode {}
"
`;

exports[`Angular basic outputs 1`] = `
"import { Output, EventEmitter, Component, Input } from \\"@angular/core\\";

@Component({
  selector: \\"my-basic-outputs-component\\",
  template: \`
    <div></div>
  \`,
})
export default class MyBasicOutputsComponent {
  @Output() onMessage = new EventEmitter();
  @Output() onEvent = new EventEmitter();

  @Input() message: any;

  name = \\"PatrickJS\\";

  ngOnInit() {
    this.onMessage.emit(this.name);
    this.onEvent.emit(this.message);
  }
}
"
`;

exports[`Angular basic outputs meta 1`] = `
"import { Output, EventEmitter, Component, Input } from \\"@angular/core\\";

@Component({
  selector: \\"my-basic-outputs-component\\",
  template: \`
    <div></div>
  \`,
})
export default class MyBasicOutputsComponent {
  @Output() onMessage = new EventEmitter();
  @Output() onEvent = new EventEmitter();

  @Input() message: any;

  name = \\"PatrickJS\\";

  ngOnInit() {
    this.onMessage.emit(this.name);
    this.onEvent.emit(this.message);
  }
}
"
`;

exports[`Angular className to class 1`] = `
"import { Component } from \\"@angular/core\\";

@Component({
  selector: \\"class-name-code\\",
  template: \`
    <div>
      <div class=\\"no binding\\">Without Binding</div>

      <div [class]=\\"bindings\\">With binding</div>
    </div>
  \`,
})
export default class ClassNameCode {
  bindings = \\"a binding\\";
}
"
`;

exports[`Angular multiple onUpdate 1`] = `
"import { Component } from \\"@angular/core\\";

@Component({
  selector: \\"multiple-on-update\\",
  template: \`
    <div></div>
  \`,
})
export default class MultipleOnUpdate {
  ngAfterContentChecked() {
    console.log(\\"Runs on every update/rerender\\");

    console.log(\\"Runs on every update/rerender as well\\");
  }
}
"
`;

exports[`Angular ng-content and Slot 1`] = `
"import { Component, Input } from \\"@angular/core\\";

@Component({
  selector: \\"content-slot-code\\",
  template: \`
    <div>
      <ng-content select=\\"[testing]\\"></ng-content>

      <div>
        <hr />
      </div>

      <div>
        <ng-content></ng-content>
      </div>
    </div>
  \`,
})
export default class ContentSlotCode {}
"
`;

exports[`Angular ng-content and Slot jsx-props 1`] = `
"import { Component, Input } from \\"@angular/core\\";

@Component({
  selector: \\"content-slot-jsx-code\\",
  template: \`
    <div>
      <ng-content select=\\"[testing]\\"></ng-content>

      <div>
        <hr />
      </div>

      <div><ng-content></ng-content></div>
    </div>
  \`,
})
export default class ContentSlotJsxCode {
  @Input() children: any;
}
"
`;

exports[`Angular onInit 1`] = `
"import { Component } from \\"@angular/core\\";

@Component({
  selector: \\"on-init\\",
  template: \`
    <div></div>
  \`,
})
export default class OnInit {
  ngOnInit() {
    console.log(\\"Runs once every update/rerender\\");
  }
}
"
`;

exports[`Angular onInit and onMount 1`] = `
"import { Component } from \\"@angular/core\\";

@Component({
  selector: \\"on-init\\",
  template: \`
    <div></div>
  \`,
})
export default class OnInit {
  ngOnInit() {
    console.log(\\"onInit\\");

    console.log(\\"onMount\\");
  }
}
"
`;

exports[`Angular onMount 1`] = `
"import { Component } from \\"@angular/core\\";

@Component({
  selector: \\"comp\\",
  template: \`
    <div></div>
  \`,
})
export default class Comp {
  ngOnInit() {
    console.log(\\"Runs on mount\\");
  }

  ngOnDestroy() {
    console.log(\\"Runs on unMount\\");
  }
}
"
`;

exports[`Angular onUpdate 1`] = `
"import { Component } from \\"@angular/core\\";

@Component({
  selector: \\"on-update\\",
  template: \`
    <div></div>
  \`,
})
export default class OnUpdate {
  ngAfterContentChecked() {
    console.log(\\"Runs on every update/rerender\\");
  }
}
"
`;
